--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -10,5 +10,12 @@ page {
 }
 .pct1{
   height: 280rpx;
-  width: 600rpx;
+  width: 650rpx;
+  border-radius: 22rpx;
+}
+.text1{
+  color: white;
+  position: absolute;
+  margin: 40rpx;
+  left: 30rpx;
 }
