--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -19,3 +19,27 @@ page {
   margin: 40rpx;
   left: 30rpx;
 }
+.understand{
+  border: white ;
+  border: solid 2px;
+  border-radius: 20px;
+  margin-top: 20rpx;
+  width: 120rpx;
+  height: 35rpx;
+  font-size: 22rpx;
+  text-align: center;
+  
+}
+
+.pct5{
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  top: 500rpx;
+}
+.pct5 image{
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+  margin: 20rpx;
+}
