--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -7,6 +7,7 @@ page {
 .scrollarea {
   flex: 1;
   overflow-y: hidden;
+
 }
 
 .pct1{
@@ -115,6 +116,8 @@ margin-left: 20px;
 .ptmanwoman image{
   width: 112px;
   height: 86px;
+  position: relative;
+  left: 60rpx;
 }
 
 .ptsound{
@@ -212,6 +215,7 @@ color: rgba(16,16,16,1);
 text-align: center;
 box-shadow: 0px 4px 3px 0px rgba(0,0,0,0.07);
 font-family: Roboto;
+margin: 10rpx;
   
 }
 
@@ -242,6 +246,11 @@ font-family: Roboto;
   position: relative;
   top:20rpx;
   
+}
+
+.scrollview{
+  width: 100%;
+  height: 155px;
 }
 
 
