--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -7,6 +7,7 @@ page {
 .scrollarea {
   flex: 1;
   overflow-y: hidden;
+  
 
 }
 
@@ -198,11 +199,12 @@ background-color: rgb(98, 193, 231);
 
 .pt4{
   width: 500px;
-  height: 147px;
+  height: 260px;
   justify-content: left;
   position: relative;
   top: 200rpx;
   display: flex;
+  
 }
 
 .pt4border{
@@ -248,9 +250,33 @@ margin: 10rpx;
   
 }
 
-.scrollview{
-  width: 100%;
-  height: 155px;
+.notice{
+  position: relative;
+  top:30rpx;
+  left: -40rpx;
+ 
+}
+
+.notice text{
+  margin-left:50rpx ;
+  font-weight: 500;
+  font-size: small;
+}
+
+.noticelast{
+  display: flex;
+  margin-top: 50rpx;
+}
+
+.noticelast1{
+  font-weight: 600;
+  width: 520rpx;
+}
+
+.noticelast2{
+  margin-left:-465rpx ;
+  color:gray;
+  
 }
 
 
