--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -118,22 +118,19 @@
 <!-- 通知公告内容部分 -->
 <view class="noticelast">
 <view class="noticelast1">加强新生入学后校园安全管理规范的通知</view>
-<image style="width: 100rpx; height: 100rpx; border-radius: 10%; margin-left: 50rpx;" src="/pict/pt3-1.png" mode=""/>
+<image class="noticeimage" src="/pict/pt3-1.png" mode=""/>
 </view>
 <view class="noticelast2"> 校园新闻网</view>
 <view class="noticelast">
 <view class="noticelast1">加强新生入学后校园安全管理规范的通知</view>
-<image style="width: 100rpx; height: 100rpx; border-radius: 10%; margin-left: 50rpx;" src="/pict/pt3-1.png" mode=""/>
+<image class="noticeimage"src="/pict/pt3-2.png" mode=""/>
 </view>
 <view class="noticelast2"> 校园新闻网</view>
 <view class="noticelast">
 <view class="noticelast1">加强新生入学后校园安全管理规范的通知</view>
-<image style="width: 100rpx; height: 100rpx; border-radius: 10%; margin-left: 50rpx;" src="/pict/pt3-1.png" mode=""/>
+<image class="noticeimage" src="/pict/pt3-3.png" mode=""/>
 </view>
 <view class="noticelast2"> 校园新闻网</view>
-
-
-
 
 <!-- 结束处 -->
 </view>
