--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -1,1 +1,22 @@
 <!--pages/list/list.wxml-->
+<navigation-bar style="height: 130rpx;" title="应用" back="{{false}}" color="black" background="#808080">
+
+</navigation-bar>
+<!-- 头部搜索栏 -->
+<view class="top">
+<view style="font-weight: bold; font-size: large; position: relative; left: 50rpx;" >应用</view>
+<view class="topborder">
+<view class="search"><image src="/pict2/search.png" mode=""/></view>
+<view class="searchtext">搜索应用 消息 新闻</view>
+</view>
+<image src="/pict2/scode.png" mode=""/>
+<image src="/pict2/mess.png" mode=""/>
+</view>
+<!-- 滚动条 -->
+<scroll-view class="scrollarea" scroll-y type="list" >
+<!-- 男女图 -->
+<view>
+
+</view>
+
+</scroll-view>
