--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -195,6 +195,7 @@ background-color: rgb(98, 193, 231);
 .pct4text text{
   position: relative;
   display: block;
+  
 }
 
 .pt4{
@@ -265,8 +266,7 @@ margin: 10rpx;
 .noticeimage{
   width: 100rpx; 
   height: 100rpx; 
-  border-radius: 10%; 
-  margin-left: 50rpx;
+  border-radius: 10%; margin-left: 50rpx;
 }
 .noticelast{
   display: flex;
