--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -50,3 +50,123 @@ box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.07);
 display: flex;
 margin-left:110rpx ;
 }
+
+.ptmanwoman{
+  display: flex;
+  position: relative;
+  top: 12px;
+  
+}
+
+.ptmanwomantext1{
+  font-size: 10px  ;
+  color: white;
+  position: relative;
+  left: 32px;
+  top: 19px;
+}
+
+.ptmanwomantext2{
+  font-size: 10px  ;
+  color: white;
+  position: relative;
+  right: -32px;
+  top: 19px;
+}
+
+
+.ptwoman{
+width: 162px;
+height: 85px;
+line-height: 20px;
+border-radius: 10px;
+background: linear-gradient(117.31deg, rgba(254,178,122,1) 11.25%,rgba(255,255,92,1) 95.53%);
+color: rgba(16,16,16,1);
+font-size: 14px;
+text-align: center;
+margin-left: 30rpx;
+
+
+
+}
+
+.ptman{
+width: 158px;
+height: 85px;
+line-height: 20px;
+border-radius: 10px;
+background: linear-gradient(109.09deg, rgba(149,249,218,1) 8.35%,rgba(83,189,232,1) 122.08%);
+color: rgba(16,16,16,1);
+font-size: 14px;
+text-align: center;
+margin-left: 20px;
+}
+
+.ptmanwoman image{
+  width: 90px;
+  height: 76px;
+ 
+}
+
+.pct4text{
+  position: relative;
+  top: 160rpx;
+  left: -100rpx;
+}
+.pct4text text{
+  position: relative;
+  display: block;
+}
+
+.pt4{
+  width: 500px;
+  height: 260px;
+  justify-content: left;
+  position: relative;
+  top: 200rpx;
+  display: flex;
+  
+}
+
+.pt4border{
+width: 111px;
+height: 147px;
+line-height: 20px;
+border-radius: 7px;
+background-color: rgba(255,255,255,1);
+color: rgba(16,16,16,1);
+text-align: center;
+box-shadow: 0px 4px 3px 0px rgba(0,0,0,0.07);
+font-family: Roboto;
+margin: 10rpx;
+  
+}
+
+.pt4image{
+  width: 60rpx;
+  height: 60rpx;
+  border-radius: 50%;
+}
+
+.pt4eye{
+  width: 20rpx;
+  height: 20rpx;
+  
+}
+
+.eyesborder{
+  border-radius: 7px;
+  background-color: rgba(233, 231, 231, 0.979);
+  width: 120rpx;
+  position: relative;
+  left:22%;
+  top: 2rpx;
+}
+
+.pct4add{
+  width: 60rpx;
+  height: 60rpx;
+  position: relative;
+  top:20rpx;
+  
+}
