--- a/pages/cate/cate.wxml
+++ b/pages/cate/cate.wxml
@@ -44,25 +44,28 @@
       <text class="text01"> 教职工请假申请 </text> 
       <text class="text02"> 工作部门:系统维护 请假申请人xxx</text>
  </view>
-<view>昨天</view>
-<image src="/pict3/03.png" mode=""/>
+<view class="text03">昨天</view>
+
+<image src="/pict3/01.png" mode=""/>
 <view class="message1">
       <text class="text01"> 教职工请假申请 </text> 
       <text class="text02"> 工作部门:系统维护 请假申请人xxx</text>
  </view>
-<view>昨天</view>
-<image src="/pict3/03.png" mode=""/>
+<view class="text03">昨天</view>
+
+<image src="/pict3/04.png" mode=""/>
 <view class="message1">
       <text class="text01"> 教职工请假申请 </text> 
       <text class="text02"> 工作部门:系统维护 请假申请人xxx</text>
  </view>
-<view>昨天</view>
-<image src="/pict3/03.png" mode=""/>
+<view class="text03">昨天</view>
+
+<image src="/pict3/05.png" mode=""/>
 <view class="message1">
       <text class="text01"> 教职工请假申请 </text> 
       <text class="text02"> 工作部门:系统维护 请假申请人xxx</text>
  </view>
-<view>昨天</view>
+<view class="text03">昨天</view>
 </view>
 <!-- 结束 -->
 </scroll-view>
