--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,7 +10,7 @@
   <view class="pct101">
   <image class="pct1" src="/pict/1.png"/>
   <view class="text1">
-  <view style=" margin-bottom: -240rpx;">智慧校园门户</view>
+  <view style=" margin-bottom: -240rpx; position:relative; top: -250rpx;">智慧校园门户</view>
   <view style="font-size: 25rpx;">学校概况 办事指南等功能</view>
   <view style="font-size: 25rpx;">方便快捷 办事实时查看消息</view>
   <view class="understand">去了解</view>
@@ -122,12 +122,14 @@
 </view>
 <view class="noticelast2"> 校园新闻网</view>
 <view class="noticelast">
-<view class="noticelast1">加强新生入学后校园安全管理规范的通知</view>
+<view class="noticelast1">关于开展2023新生入学教育系列培训课程的指导意见
+</view>
 <image class="noticeimage"src="/pict/pt3-2.png" mode=""/>
 </view>
 <view class="noticelast2"> 校园新闻网</view>
 <view class="noticelast">
-<view class="noticelast1">加强新生入学后校园安全管理规范的通知</view>
+<view class="noticelast1">关于加强新生入学后校园安全管理条例实行的通知
+</view>
 <image class="noticeimage" src="/pict/pt3-3.png" mode=""/>
 </view>
 <view class="noticelast2"> 校园新闻网</view>
