--- a/pages/wode/wode.wxss
+++ b/pages/wode/wode.wxss
@@ -1,1 +1,22 @@
 /* pages/wode/wode.wxss */
+
+.top{
+  width: 393px;
+  height: 147px;
+  line-height: 20px;
+  font-size: 18px;
+  font-weight: bolder;
+  box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.1);
+  background: linear-gradient(180deg, rgba(58,209,174,1) 0%,rgba(255,255,255,0) 100%);
+  color: rgba(16,16,16,1);
+  display: flex;
+  position: relative;
+  top:  140rpx;
+  z-index: 99;
+  
+    
+  }
+.top image{
+  width: 20px;
+  height: 20px;
+}
